# aiPlatform

./: .env.e2e.example  .gitignore  README.md  Roadmap-全量目标-Gap清单.md  agent_platform_execution_plan.md  agent_platform_gap_analysis.md  aiPlat-remaining-checklist.md  aiPlat-vs-hermes-vs-claude-code-vs-openclaw-architecture.md  aiPlat_arch_vs_hermes.md  aiPlat_设计文档与实现一致性审查报.md  aiPlat_设计文档与实现一致性审查报告.docx  aiPlat_设计文档与实现一致性审查报告.pages  e2e_smoke.py  e2e_smoke.sh  multi_agent_reliability_mapping.md  restart.sh  start.sh  stop.sh  平台化路线-PR拆解与排期.md  平台化路线-四服务版PR拆解与排期.md  架构对照-aiPlat-vs-Hermes-vs-ClaudeCode-vs-OpenClaw.md  规范-app-session_id与conversation_key.md  规范-core-run_id-trace_id-request_id.md  规范-platform-鉴权与身份透传.md
aiPlat-core/: .pre-commit-config.yaml  README.md  pyproject.toml
aiPlat-core/.github/workflows/: kernel-static-scan.yml
aiPlat-core/agents/conversational_agent/: AGENT.md
aiPlat-core/agents/plan_agent/: AGENT.md
aiPlat-core/agents/rag_agent/: AGENT.md
aiPlat-core/agents/react_agent/: AGENT.md
aiPlat-core/agents/tool_agent/: AGENT.md
aiPlat-core/core/: __init__.py  exceptions.py  schemas.py  server.py
aiPlat-core/core/adapters/: __init__.py
aiPlat-core/core/api/: __init__.py
aiPlat-core/core/apps/: __init__.py
aiPlat-core/core/governance/: audit.py  changeset.py  gating.py  verification.py
aiPlat-core/core/harness/: __init__.py  heartbeat_monitor.py  integration.py  state.py
aiPlat-core/core/learning/: __init__.py  apply.py  autorollback.py  manager.py  pipeline.py  release.py  types.py  workspace_target.py
aiPlat-core/core/management/: __init__.py  adapter_manager.py  agent_manager.py  harness_manager.py  job_scheduler.py  knowledge_manager.py  mcp_manager.py  memory_manager.py  package_manager.py  skill_install_plan_token.py  skill_installer.py  skill_linter.py  skill_manager.py
aiPlat-core/core/mcp/: prod_policy.py  runtime_sync.py
aiPlat-core/core/observability/: routing_service.py
aiPlat-core/core/orchestration/: __init__.py  orchestrator.py
aiPlat-core/core/policy/: __init__.py  engine.py
aiPlat-core/core/resources/: skillSpecV2.schema.json
aiPlat-core/core/security/: rbac.py  skill_signature_gate.py
aiPlat-core/core/services/: __init__.py  config_registry_store.py  context_service.py  execution_store.py  file_service.py  model_service.py  prompt_service.py  trace_service.py
aiPlat-core/core/tests/: conftest.py
aiPlat-core/core/tools/: export_eval_openapi.py  sync_eval_docs.py
aiPlat-core/core/utils/: __init__.py  ids.py
aiPlat-core/core/workspace/: reload.py
aiPlat-core/docs/: ARCHITECTURE_STATUS.md  audit_checklist.md  doc_full_scan_report.md  index.md  jobs.md
aiPlat-core/docs/adapters/: llm.md
aiPlat-core/docs/agents/: architecture.md  index.md
aiPlat-core/scripts/: kernel_metrics.py  kernel_static_scan.py  learning_cli.py
aiPlat-core/skills/: README.md
aiPlat-infra/: README.md  pyproject.toml  restart.sh  start.sh  stop.sh
aiPlat-infra/docs/: index.md
aiPlat-infra/infra/: __init__.py  exceptions.py
aiPlat-management/: QUICKSTART.md  README.md  pyproject.toml  restart.sh  run.py  start.sh  stop.sh
aiPlat-management/config/: management.yaml
aiPlat-management/docs/: IMPLEMENTATION_STATUS.md  architecture-boundary.md  doctor.md  index.md  onboarding.md  overview.md
aiPlat-management/frontend/: index.html  package-lock.json  package.json  proxy_server.py  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
aiPlat-management/management/: __init__.py  core_client.py  infra_client.py  main.py  request_context.py  server.py
aiPlat-management/tests/: __init__.py  test_core_gateway_admin_proxy.py  test_core_jobs_dlq_proxy.py  test_core_learning_autocapture_to_pr_proxy.py  test_core_metrics.py  test_dashboard.py  test_dashboard_config.py  test_diagnostics_change_control.py  test_diagnostics_graph_resume.py  test_diagnostics_graphs.py  test_diagnostics_links.py  test_diagnostics_syscalls.py  test_diagnostics_trace.py  test_infra_adapter.py  test_infra_api.py  test_infra_collector.py  test_infra_health.py  test_monitoring.py  test_policies_evaluate_proxy.py
(+1353 files in other folders)
