[project]
name = "aiplat-core"
version = "0.1.0"
description = "AI Platform Core Layer - Agent Framework, Memory, Models, Skills"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "async-timeout>=4.0.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["core/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "-W", "ignore::DeprecationWarning"
]
asyncio_mode = "auto"
markers = [
    "integration: mark test as integration test",
    "unit: mark test as unit test",
]

[tool.coverage.run]
source = ["core"]
omit = ["core/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]