[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiplat-infra"
version = "0.1.0"
description = "AI Platform Infrastructure Layer"
requires-python = ">=3.10"
dependencies = [
    # Database
    "asyncpg>=0.27.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.19.0",
    "motor>=3.3.0",
    "pymongo>=4.3.0",
    
    # Messaging
    "aiokafka>=0.10.0",
    "aio-pika>=9.0.0",
    "pika>=1.3.0",
    "redis>=4.5.0",
    
    # Vector stores
    "pymilvus>=2.3.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.0",
    "pinecone-client>=2.2.0",
    
    # LLM
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    
    # Network
    "websockets>=11.0",
    
    # Utils
    "pyyaml>=6.0",
    "pydantic>=2.0.0",

    # Observability (OpenTelemetry)
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "testcontainers>=3.7.0",
    "docker>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["infra*"]

[tool.pytest.ini_options]
testpaths = ["infra/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "-W", "ignore::DeprecationWarning"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests (requires external services)",
    "slow: Slow tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["infra"]
omit = ["infra/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
