[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiplat-management"
version = "0.1.0"
description = "AI Platform Management Layer - Dashboard, Monitoring, Alerting, Diagnostics"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
include = ["management*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "-W", "ignore::DeprecationWarning"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["management"]
omit = ["management/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]